--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/_Compi1_Proyecto1_Cliente-201403775.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.commons-io-2.4.jar=/home/sinozuke/Descargas/commons-io-2.4/commons-io-2.4.jar
+file.reference.iText-5.0.5.jar=../../Descargas/iText-5.0.5.jar
 file.reference.java-cup-11b.jar=/home/sinozuke/Descargas/java-cup-bin-11b-20151001/java-cup-11b.jar
 file.reference.jflex-1.6.1.jar=/home/sinozuke/Descargas/jflex-1.6.1/jflex-1.6.1/lib/jflex-1.6.1.jar
 file.reference.soap-2.3.jar=../../Descargas/soap-2.3.jar
@@ -38,7 +39,8 @@ javac.classpath=\
     ${file.reference.jflex-1.6.1.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.soap-2.3.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.iText-5.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
